Modernize build.gradle and run test on JDK 11+